--- a/tes.env
+++ b/tes.env
@@ -1,15 +1,15 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-BOT_ID=
-API_GEMINI
-API_BOTCHAX=della
-BOT_NAME=
-DB_NAME=
-URL_LOGO=
+API_ID=27418440
+API_HASH=0a08a360e0e9f41b9896f655c300d09d
+BOT_TOKEN=7856214120:AAEc_rJ2CUvkhZepUK__3rZjxzpBASsv-4M
+BOT_ID=7856214120
+API_GEMINI=AIzaSyARecWxktUPu_ywxywdg3OFwh3XkyrD4_M
+API_BOTCHAX=GenzR
+BOT_NAME=𝘼𝙕𝙀𝙇𝙇𝙊 𝙐𝙎𝙀𝙍𝘽𝙊𝙏
+DB_NAME=AzelloUbot
+URL_LOGO=https://files.catbox.moe/fzlxwt.png
 BLACKLIST_GCAST=
-SUDO_OWNERS=
-AKSES_DEPLOY=
-OWNER_ID=
-LOG_SELLER=
-LOG_BACKUP=
+SUDO_OWNERS=5662169739
+AKSES_DEPLOY=5662169739
+OWNER_ID=5662169739
+LOG_SELLER=-1002517617021
+LOG_BACKUP=-1002638098602
