--- a/tes.env
+++ b/tes.env
@@ -1,15 +1,15 @@
-API_ID=27418440
-API_HASH=0a08a360e0e9f41b9896f655c300d09d
-BOT_TOKEN=7856214120:AAEc_rJ2CUvkhZepUK__3rZjxzpBASsv-4M
-BOT_ID=7856214120
+API_ID=23228407
+API_HASH=4bfbc373619628a8e6dd1d51da8c6fbc
+BOT_TOKEN=7714524326:AAGZa-r8dGa-CZEVTsmUoeLMSCe_iUnmiMY
+BOT_ID=7714524326
 API_GEMINI=AIzaSyARecWxktUPu_ywxywdg3OFwh3XkyrD4_M
 API_BOTCHAX=GenzR
-BOT_NAME=𝘼𝙕𝙀𝙇𝙇𝙊 𝙐𝙎𝙀𝙍𝘽𝙊𝙏
-DB_NAME=AzelloUbot
+BOT_NAME=𝗝𝗢𝗡𝗔𝗧𝗛𝗔𝗡 𝗨𝗕𝗢𝗧
+DB_NAME=jonathan
 URL_LOGO=https://files.catbox.moe/fzlxwt.png
 BLACKLIST_GCAST=
-SUDO_OWNERS=5662169739
-AKSES_DEPLOY=5662169739
-OWNER_ID=5662169739
-LOG_SELLER=-1002517617021
-LOG_BACKUP=-1002638098602
+SUDO_OWNERS=5648296402
+AKSES_DEPLOY=5648296402
+OWNER_ID=5648296402
+LOG_SELLER=-1002797506458
+LOG_BACKUP=-1002818541265
